--- a/src/style/ExercisesList.css
+++ b/src/style/ExercisesList.css
@@ -12,7 +12,14 @@
     font-weight: bolder;
     font-size: 40px;
     margin-right: 80px; 
+    transition-duration: 0.4s;
 }
+
+#exercise-box:hover {
+    background-color: rgb(139, 108, 22); /* Green */
+    color: silver;
+}
+
 
 #exercises-container {
     display: flex;
@@ -31,14 +38,33 @@
 }
 
 #title {
-    font-weight: bolder;
+    /* font-weight: bolder; */
     /* font-size: x-large; */
-    color: rgb(139, 108, 22);
-    background-color:rgb(8, 8, 8);
+    /* color: rgb(139, 108, 22); */
+    /* background-color:rgb(8, 8, 8); */
     margin:0;
-    text-align: center;
-    font-size: 50px;
-    padding-bottom: 10px;
-    padding-top: 10px;
+    /* text-align: center; */
+    /* font-size: 55px; */
+    /* padding-bottom: 10px; */
+    /* padding-top: 10px; */
+}
 
+.glow {
+    font-weight: bolder;
+    font-size: 87px;
+    color: rgb(12, 12, 11);
+    text-align: center;
+    -webkit-animation: glow 1s ease-in-out infinite alternate;
+    -moz-animation: glow 1s ease-in-out infinite alternate;
+    animation: glow 1s ease-in-out infinite alternate;
+    padding-bottom: 60px;
+    padding-top: 17px;
+}
+@keyframes glow {
+    from {
+    text-shadow: 0 0 10px #d0c724, 0 0 20px rgb(138, 104, 16), 0 0 30px #0e0d0d, 0 0 40px #222121, 0 0 50px goldenrod, 0 0 60px #b4e600, 0 0 70px goldenrod;
+    }
+    to {
+    text-shadow: 0 0 20px goldenrod, 0 0 30px gold, 0 0 40px gold, 0 0 50px goldenrod, 0 0 60px goldenrod, 0 0 70px goldenrod, 0 0 80px goldenrod;
+    }
 }
