--- a/src/style/History.css
+++ b/src/style/History.css
@@ -6,3 +6,26 @@
 #title {
     font-size: 10vw;
 }
+
+.traker-table{
+    color: white;
+    padding: 6px;
+    margin: 25px;
+}
+
+.traker-table {
+    background-color: rgb(139, 108, 22);
+}
+
+.input-text{
+    width: 100px;
+    /* padding: 2px; */
+}
+
+input {
+    width: 95%;
+    font-weight: bolder;
+    border: none;
+    color: white;
+
+}
