--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -1,4 +1,4 @@
-.auth-form-containe, .login-form, .signup-form{
+/* .auth-form-containe, .login-form, .signup-form{
     display:flex;
     flex-direction: column;
     min-height: 50vh;
@@ -28,7 +28,7 @@
     margin-right: 1%;
 } */
 
-#switch{
+/* #switch{
     color:white;
     margin-bottom: 20%;
     font-size: large;
@@ -45,11 +45,10 @@
     margin-right: 10%;
     width:30%;
     border-style: solid;
-}
+} */
 
-#password{
+/* #password{
     margin-left: 20%;
     margin-right: 20%; 
     width:30%;  
-    border-style: solid;
-}
+    border-style: solid; */
