--- a/src/style/Signup.css
+++ b/src/style/Signup.css
@@ -1,4 +1,4 @@
-.auth-form-containe, .signup-form{
+/* .auth-form-container, .signup-form{
     display:flex;
     flex-direction: column;
     min-height: 50vh;
@@ -56,4 +56,4 @@
     margin-right: 20%; 
     width:30%;  
     border-style: solid;
-}
+} */
