sign in changes to sign out when user logs in and 'please sign in' opens modal

--- a/src/style/History.css
+++ b/src/style/History.css
@@ -27,5 +27,9 @@ input {
     font-weight: bolder;
     border: none;
     color: white;
+}
 
+#history-logged-out{
+    display: flex;
+    flex-direction: column;
 }
