--- a/src/style/Exercise.css
+++ b/src/style/Exercise.css
@@ -2,8 +2,10 @@
     display:flex;
     color: rgb(8, 8, 8);
     background-color: rgb(139, 108, 22);
-    height: 600px;
-    width: 500px;
+    /* height: 600px; */
+    height: 80%;
+    /* width: 500px; */
+    width: 40%;
     border-radius: 25%;
     padding: 30px; 
     justify-content: center;
@@ -13,13 +15,16 @@
     display:flex;
     color: rgb(8, 8, 8);
     background-color: rgb(139, 108, 22);
-    height: 600px;
-    width: 600px;
+    /* height: 600px; */
+    height: 80%;
+    /* width: 600px; */
+    width: 40%;
     border-radius: 25%;
     padding: 30px;
     align-items: center;
     justify-content: center;
     text-align: center;
+    font-size: 2vw
 }
 #exercise-name{
     color:rgb(139, 108, 22);
@@ -31,7 +36,8 @@
     justify-content: center;
     text-align: center;
     font-weight: bolder;
-    font-size: 100px;
+    /* font-size: 100px; */
+    font-size: 4vw;
     margin: auto;
 }
 
