--- a/src/style/ExercisesList.css
+++ b/src/style/ExercisesList.css
@@ -26,16 +26,13 @@
 
 #exercises-container {
     display: flex;
-    /* width: 1000px; */
-    /* height: 50vw;  */
     width:100%;
     height:100%;
     margin: auto;
     justify-content: space-around;
     padding:20px;
-    /* padding:1em; */
     flex-wrap: wrap; 
-    margin-bottom: ;
+    margin-bottom: 10vw;
 }
 
 #container{
@@ -65,7 +62,7 @@
     -webkit-animation: glow 1s ease-in-out infinite alternate;
     -moz-animation: glow 1s ease-in-out infinite alternate;
     animation: glow 1s ease-in-out infinite alternate;
-    padding-bottom: 60px;
+    padding-bottom: 22px;
     padding-top: 17px;
 }
 @keyframes glow {
