--- a/src/style/NaviBar.css
+++ b/src/style/NaviBar.css
@@ -9,6 +9,7 @@
     display: inline-block;
     margin: 8px;
     /* border-radius: 12px; */
+    text-decoration: none;
     
     
 }
@@ -22,6 +23,7 @@
     transition-duration: 0.4s;    
     display: inline-block;
     margin: 8px;
+    text-decoration: none;
 }
 
 #tracker {
@@ -33,6 +35,7 @@
     transition-duration: 0.4s;
     display: inline-block;
     margin: 8px;
+    text-decoration: none;
 }
 
 .nav-button{
