--- a/src/style/ExercisesList.css
+++ b/src/style/ExercisesList.css
@@ -74,3 +74,20 @@
     text-shadow: 0 0 20px goldenrod, 0 0 30px gold, 0 0 40px gold, 0 0 50px goldenrod, 0 0 60px goldenrod, 0 0 70px goldenrod, 0 0 80px goldenrod;
     }
 }
+
+#loading {
+    display: flex;
+    font-size: 13vh;
+    font-weight: bolder;
+    background-color: rgb(139, 108, 22);
+    color: rgb(12, 12, 11);
+    width: 70%;
+    height: 100%;
+    justify-content: space-around;
+    align-items: center;
+    justify-content: center;
+    /* padding:20px; */
+    margin-top: 10%;
+    margin-left: 12%;
+
+}
