--- a/src/style/ExercisesList.css
+++ b/src/style/ExercisesList.css
@@ -77,17 +77,22 @@
 
 #loading {
     display: flex;
-    font-size: 13vh;
     font-weight: bolder;
     background-color: rgb(139, 108, 22);
     color: rgb(12, 12, 11);
     width: 70%;
-    height: 100%;
     justify-content: space-around;
     align-items: center;
     justify-content: center;
-    /* padding:20px; */
     margin-top: 10%;
     margin-left: 12%;
+    text-align: center;
+    font-size: 6rem;  
 
 }
+
+/* @media screen and (max-width: 606px) {
+    #loading{
+        font-size: 30%;
+    }
+} */
