--- a/src/style/ExercisesList.css
+++ b/src/style/ExercisesList.css
@@ -75,22 +75,44 @@
     }
 }
 
-#loading {
+.spinner-container {
+    position: fixed;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    width: 200px;
+    height: 200px;
     display: flex;
-    font-weight: bolder;
-    background-color: rgb(139, 108, 22);
-    color: rgb(12, 12, 11);
-    width: 70%;
-    justify-content: space-around;
-    align-items: center;
     justify-content: center;
-    margin-top: 10%;
-    margin-left: 12%;
-    text-align: center;
-    font-size: 6rem;  
+    align-items: center;
 
 }
 
+.spinner {
+    width: 100%;
+    height: 100%;
+    border: 12px solid #e3e3e3;
+    border-radius: 50%;
+    border-right-color: rgb(139, 108, 22);
+    animation: spin 1s ease infinite;
+}
+
+.loading-text {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    color: rgb(139, 108, 22);
+    border-radius: 40%;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    font-size: xx-large;
+}
+
+@keyframes spin {
+    100% {
+        transform: rotate(360deg);
+    }
+}
 /* @media screen and (max-width: 606px) {
     #loading{
         font-size: 30%;
